Upgrade to newer minestom & velocity versions